group-rouletteの部屋作成APIを追加
